2023-12-18T01:08:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7242283279 # 2178
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-18
* notice: last 14d: unq all: 18 59
* notice: prev accum: outdated-unq outdated-all / unq all: 498 2667 / 516 2734
* notice: next accum: outdated-unq outdated-all / unq all: 499 2677 / 517 2736
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-12-03] / [2023-12-17]

2023-12-17T16:17:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7239656298 # 2177
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-17
* notice: last 14d: unq all: 17 67
* notice: prev accum: outdated-unq outdated-all / unq all: 498 2667 / 515 2733
* notice: next accum: outdated-unq outdated-all / unq all: 498 2667 / 516 2734
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-12-17]

2023-12-16T16:18:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7232991313 # 2174
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-16
* notice: last 14d: unq all: 16 66
* notice: prev accum: outdated-unq outdated-all / unq all: 497 2666 / 515 2733
* notice: next accum: outdated-unq outdated-all / unq all: 498 2667 / 515 2733
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-12-02] / []

2023-12-15T08:19:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7219621137 # 2170