@@ -1,12 +1,7 @@
 {
-  "count": 59,
-  "uniques": 18,
+  "count": 61,
+  "uniques": 17,
   "views": [
-    {
-      "timestamp": "2023-12-04T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2023-12-05T00:00:00Z",
       "count": 20,
@@ -56,6 +51,11 @@
       "timestamp": "2023-12-17T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-12-18T00:00:00Z",
+      "count": 5,
+      "uniques": 1
     }
   ]
 }
