@@ -1,3 +1,12 @@
+2023-12-18T16:19:30Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7250833646 # 2180
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-18
+* notice: last 14d: unq all: 17 61
+* notice: prev accum: outdated-unq outdated-all / unq all: 499 2677 / 517 2736
+* notice: next accum: outdated-unq outdated-all / unq all: 501 2680 / 518 2741
+* notice: prev exec diff / last date diff / accum: unq all: +1 +5 -0 -0 / +1 +5 -0 -0 / 1 5
+* notice: removed / changed dates: [2023-12-04] / [2023-12-18]
+
 2023-12-18T01:08:42Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7242283279 # 2178
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-18
